# handwritten-survey-ocr

./: .gitignore  README.md  app.py  cost_tracker.py  diff_viewer.py  document_generator.py  excel_exporter.py  gemini_api.py  ocr_processor.py  pyproject.toml  question_template_manager.py  requirements.txt  survey_analyzer.py  template_manager.py  text_editor.py  training_comparison.py  utils.py  word_parser.py
.streamlit/: config.toml  secrets.toml.example
