[project]
name = "questionnaire-ocr-app"
version = "1.0.0"
description = "手書きアンケートOCR・文字起こしアプリ"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.33.0",
    "pillow>=10.2.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.2",
    "numpy>=1.26.4,<2",
    "requests>=2.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]